# zBaseMediaFiltersLib

./: CMakeLists.txt  README.md  base_media_filters_lib_cfg.h.in
3rd/libfdkaac-2.0.1/lib/Release.win32/: fdk-aac.lib
3rd/libfdkaac-2.0.1/lib/Release.x64/: fdk-aac.lib
encoder/MediaEncoder/: CMakeLists.txt  DwHWVideoEncoder.cpp  DwHWVideoEncoder.h  FFMPEGAudioEncoder.cpp  FFMPEGAudioEncoder.h  MediaEncoder.cpp  MediaEncoder.h  MediaEncoder.vcproj  MediaEncoder_cfg.h.in  NVSDKVideoEncoder.cpp  NVSDKVideoEncoder.h  QSVVideoEncoder.cpp  QSVVideoEncoder.h  libobssqv11.cpp  libobssqv11.h  obs-avc.c  obs-avc.h  x264Encoder.cpp  x264Encoder.h
encoder/MediaEncoder/nvenc/: NvHWEncoder.cpp  NvHWEncoder.h  dynlink_cuda.cpp
encoder/obs-qsv11/: CMakeLists.txt  QSV_Encoder.cpp  QSV_Encoder.h  QSV_Encoder_Internal.cpp  README.txt
encoder/obs-qsv11/obs-qsv11-vs2015/: obs-qsv11.def  obs-qsv11.vcxproj  obs-qsv11.vcxproj.filters
encoder/obs-qsv11/obs-qsv11-vs2015/Release/: BuildLog.htm
encoder/obs-qsv11/obs-qsv11-vs2015/Release/obs-qsv11.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.22800.read.1.tlog  Lib-link.22800.write.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  obs-qsv11.lastbuildstate  obs-qsv11.write.1u.tlog
encoder_audio/: .gitignore
encoder_audio/fdk-aac-test/: fdk-aac-test.sln
encoder_audio/fdk-aac-test/fdk-aac-test/: aac_encoder_test.cpp  fdk-aac-test.cpp  fdk-aac-test.vcxproj  fdk-aac-test.vcxproj.filters
encoder_audio/fdkaac_encoder/: aac_encoder.cpp  aac_encoder.h
media_filter/: CMakeLists.txt  media_filter_cfg.h.in
media_filter/inc/: AudioData.h  BasicMediaFilter.h  BoostInc.h  CodecMediaData.h  IMediaFilter.h  IVideoProcessor.h  MediaData.h  MemoryAllocator.h  PcmData.h  PcmDataHelper.h  PictureInfo.h  RingBuffer.h  VideoData.h  fourcc.h  mediadata_tpl.h  mediafilter.h
media_filter/src/: BasicMediaFilter.cpp  IMediaFilter.cpp  MediaData.cpp  MemoryAllocator.cpp  PcmData.cpp  PcmDataHelper.cpp  PictureInfo.cpp
mixer/test/: test.sln
mixer/test/test/: rec_play-all-0.pcm  rec_send-talk.pcm  test.cpp  test.vcxproj
mixer/zAudioMixer/: zAudioMixer.cpp  zAudioMixer.h  zAudioMixer.vcxproj  zAudioMixer.vcxproj.filters
source/AudioCapture/: CMakeLists.txt
source/AudioCapture/inc/: AudioCoreApiHelper.h  AudioDev.h  AudioDevCaptureSource.h  AudioDevCaptureSource_DS.h  AudioDevCaptureSrc_CAA.h  AudioDevManager.h  AudioOutputer.h  AudioOutputerCAA.h
source/AudioCapture/src/: AudioCoreApiHelper.cpp  AudioDevCaptureSource_DS.cpp  AudioDevCaptureSrc_CAA.cpp  AudioDevManager.cpp  AudioOutputerCAA.cpp
source/AudioCaptureTest/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  utils_cfg.h.in
utils/inc/: ByteRingBuffer.h  CriticalSection.h  TextHelper.h
utils/src/: ByteRingBuffer.cpp  TextHelper_win.cpp
